<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/result_title"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m"
        android:padding="@dimen/m"
        android:text="@string/result_screen_title"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result_coordinate_x_title"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m"
        android:text="@string/result_coordinate_x"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result_coordinate_x_value"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result_coordinate_y_title"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m"
        android:text="@string/result_coordinate_y"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result_coordinate_y_value"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result_orientation_title"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m"
        android:text="@string/result_orientation"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result_orientation_value"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        android:visibility="gone" />

</LinearLayout>